unpackaged/main/default/objects/Submissions__c/Submissions__c.object-meta.xml
<CustomObject>
    <label>Submissions</label>
    <nameField>
        <displayFormat>Submission {000000}</displayFormat>
        <label>Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>