unpackaged/main/default/objects/Submissions__c/fields/API_Submission_Error__c.field-meta.xml
<CustomField>
    <fullName>API_Submission_Error__c</fullName>
    <label>API Submission Error</label>
    <type>TextArea</type>
</CustomField>