unpackaged/main/default/objects/Submissions__c/fields/Approval_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Approval_Numbers__c</fullName>
    <label>Approval Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>