unpackaged/main/default/objects/Submissions__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <formula>TimeApproved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>