unpackaged/main/default/objects/Submissions__c/fields/Bank_Status__c.field-meta.xml
<CustomField>
    <fullName>Bank_Status__c</fullName>
    <label>Bank Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
                <default>true</default>
                <label>Underwriting</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>