unpackaged/main/default/objects/Submissions__c/fields/Cashio_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Cashio_Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>Cashio Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>