unpackaged/main/default/objects/Submissions__c/fields/Funded__c.field-meta.xml
<CustomField>
    <fullName>Funded__c</fullName>
    <formula>If(ISPICKVAL( Bank_Status__c , "Funded"), 100,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>