unpackaged/main/default/objects/Submissions__c/fields/Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>Funded_Date__c</fullName>
    <formula>IF( !ISNULL( Funded_DateTime__c ),  DATEVALUE(Funded_DateTime__c) , IF(ISPICKVAL( Bank_Status__c , "Funded"),  DATEVALUE(Opportunity__r.Funded_Date_Time__c) , NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funded Date</label>
    <type>Date</type>
</CustomField>