unpackaged/main/default/objects/Submissions__c/fields/Funded_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Funded_DateTime__c</fullName>
    <label>Funded DateTime</label>
    <type>DateTime</type>
</CustomField>