unpackaged/main/default/objects/Submissions__c/fields/Funder__c.field-meta.xml
<CustomField>
    <fullName>Funder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funder</label>
    <referenceTo>Funder__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>