unpackaged/main/default/objects/Submissions__c/fields/Funder_Additional_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Funder_Additional_Email_1__c</fullName>
    <label>Funder Additional Email 1</label>
    <type>Email</type>
</CustomField>