unpackaged/main/default/objects/Submissions__c/fields/Funder_Additional_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Funder_Additional_Email_2__c</fullName>
    <label>Funder Additional Email 2</label>
    <type>Email</type>
</CustomField>