unpackaged/main/default/objects/Submissions__c/fields/Funder_Email__c.field-meta.xml
<CustomField>
    <fullName>Funder_Email__c</fullName>
    <label>Funder Email</label>
    <type>Email</type>
</CustomField>