unpackaged/main/default/objects/Submissions__c/fields/Funder_Name__c.field-meta.xml
<CustomField>
    <fullName>Funder_Name__c</fullName>
    <formula>Funder__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funder Name</label>
    <type>Text</type>
</CustomField>