unpackaged/main/default/objects/Submissions__c/fields/Internal_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Status__c</fullName>
    <label>Internal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting on Answer</fullName>
                <default>true</default>
                <label>Waiting on Answer</label>
            </value>
            <value>
                <fullName>Presenting Offer</fullName>
            </value>
            <value>
                <fullName>Considering</fullName>
            </value>
            <value>
                <fullName>Not Presenting their Offer</fullName>
            </value>
            <value>
                <fullName>Can't Present</fullName>
            </value>
            <value>
                <fullName>Getting Missing Info</fullName>
            </value>
            <value>
                <fullName>Requesting Rework</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>