unpackaged/main/default/objects/Submissions__c/fields/Is_Funder_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Funder_Active__c</fullName>
    <formula>Funder__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Funder Active</label>
    <type>Checkbox</type>
</CustomField>