unpackaged/main/default/objects/Submissions__c/fields/Notes_M__c.field-meta.xml
<CustomField>
    <fullName>Notes_M__c</fullName>
    <label>Notes / Missing Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>