unpackaged/main/default/objects/Submissions__c/fields/Show_Order__c.field-meta.xml
<CustomField>
    <fullName>Show_Order__c</fullName>
    <formula>CASE(TEXT( Bank_Status__c ), 
"Signed",1,  
"Approved",2,  
"Underwriting",3, 
"Pending",4, 
"Declined",5, 
100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>