unpackaged/main/default/objects/Submissions__c/fields/Signed__c.field-meta.xml
<CustomField>
    <fullName>Signed__c</fullName>
    <formula>If(ISPICKVAL( Bank_Status__c , "Signed"), 100,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>