unpackaged/main/default/objects/Submissions__c/fields/Submit_Funder_Using_API__c.field-meta.xml
<CustomField>
    <fullName>Submit_Funder_Using_API__c</fullName>
    <formula>Funder__r.Submit_Using_API__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submit Funder Using API</label>
    <type>Checkbox</type>
</CustomField>