unpackaged/main/default/objects/Submissions__c/fields/Time_Until_Approved__c.field-meta.xml
<CustomField>
    <fullName>Time_Until_Approved__c</fullName>
    <label>Time Until Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>