unpackaged/main/default/objects/Submissions__c/fields/TimeApproved__c.field-meta.xml
<CustomField>
    <fullName>TimeApproved__c</fullName>
    <label>Time Approved</label>
    <type>DateTime</type>
</CustomField>