unpackaged/main/default/objects/Submissions__c/fields/Try_To_Get_Offers__c.field-meta.xml
<CustomField>
    <fullName>Try_To_Get_Offers__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Try To Get Offers</label>
    <type>Checkbox</type>
</CustomField>