unpackaged/main/default/objects/Submissions__c/fields/Type_of_Deal__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Deal__c</fullName>
    <label>Type of Deal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>