unpackaged/main/default/objects/Submissions__c/validationRules/Require_Offer_Before_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Offer_Before_Approved</fullName>
    <active>true</active>
    <description>This rule won't allow the user to update the Bank Status to 'Approved' until at least one Offer record exists in opportunity</description>
    <errorConditionFormula>AND(
 Opportunity__r.Offers__c  &lt; 1,
  ISPICKVAL(Bank_Status__c , "Approved") 
)</errorConditionFormula>
    <errorMessage>Before updating to Approved, there must be at least one Offer created in the opportunity</errorMessage>
</ValidationRule>